--- a/public/styles/welcome.css
+++ b/public/styles/welcome.css
@@ -1,5 +1,5 @@
 .welcome {
-    margin-top: 50px;
+    margin-top: 30px;
     margin-left: 2%;
     text-align: left;
 }
